--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,7 @@
   <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
   <!-- <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script> -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <style>
-    body {
-      font-family: 'Kanit';
-    }
-  </style>
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
   <title>React App</title>
 </head>
 <body>
